Transition ios fix

--- a/scss/styles.css
+++ b/scss/styles.css
@@ -366,9 +366,9 @@ footer .icon svg {
 }
 
 #vadbe .vadba {
-    -webkit-transition: all 0.6s cubic-bezier(0.16, 1, 0.3, 1);
-    -o-transition: all 0.6s cubic-bezier(0.16, 1, 0.3, 1);
-    transition: all 0.6s cubic-bezier(0.16, 1, 0.3, 1);
+    -webkit-transition: opacity 0.6s cubic-bezier(0.16, 1, 0.3, 1), transform 0.6s cubic-bezier(0.16, 1, 0.3, 1);
+    -o-transition: opacity 0.6s cubic-bezier(0.16, 1, 0.3, 1), transform 0.6s cubic-bezier(0.16, 1, 0.3, 1);
+    transition: opacity 0.6s cubic-bezier(0.16, 1, 0.3, 1), transform 0.6s cubic-bezier(0.16, 1, 0.3, 1);
     opacity: 0;
     -webkit-transform: translateX(-25px);
     -ms-transform: translateX(-25px);
@@ -490,9 +490,9 @@ footer .icon svg {
 }
 
 #mnenja .wrapper .mnenje {
-    -webkit-transition: all 0.6s cubic-bezier(0.16, 1, 0.3, 1);
-    -o-transition: all 0.6s cubic-bezier(0.16, 1, 0.3, 1);
-    transition: all 0.6s cubic-bezier(0.16, 1, 0.3, 1);
+    -webkit-transition: transform 0.6s cubic-bezier(0.16, 1, 0.3, 1), opacity 0.6s cubic-bezier(0.16, 1, 0.3, 1);
+    -o-transition: transform 0.6s cubic-bezier(0.16, 1, 0.3, 1), opacity 0.6s cubic-bezier(0.16, 1, 0.3, 1);
+    transition: transform 0.6s cubic-bezier(0.16, 1, 0.3, 1), opacity 0.6s cubic-bezier(0.16, 1, 0.3, 1);
     opacity: 0;
     -webkit-transform: translateY(20px);
     -ms-transform: translateY(20px);
